Change video source type to correct format
Updated video source type in index.html.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <!-- Ubaci svoj video iz GitHub Pages linka -->
   <video autoplay muted playsinline loop>
-    <source src="https://github.com/bandjurbandjur-ctrl/J/blob/main/VID_20260208_113316.mp4" type="video/mp4" />
+    <source src="https://github.com/bandjurbandjur-ctrl/J/blob/main/VID_20260208_113316.mp4" type="VID_20260208_113316.mp4" />
     Tvoj browser ne podržava video.
   </video>
 
